--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "sensor-it",
-  "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.1.3",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+	"name": "sensor-it",
+	"private": true,
+	"workspaces": ["apps/*", "packages/*"],
+	"scripts": {
+		"build": "turbo build",
+		"dev": "turbo dev",
+		"lint": "turbo lint && manypkg check",
+		"format": "biome format --write .",
+		"typecheck": "turbo typecheck"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.7.3",
+		"@manypkg/cli": "^0.21.4",
+		"turbo": "latest"
+	},
+	"engines": {
+		"node": ">=20"
+	},
+	"packageManager": "^bun@1.1.3"
 }
