--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
 	"pipeline": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": [".next/**", "!.next/cache/**"]
+			"outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
 		},
 		"dev": {
 			"cache": false,
