--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,16 @@ jobs:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+      TURBO_FALLBACK: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event.before }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
       - name: Setup Bun 
         uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
       - name: Check for changes
-        run: bunx turbo-ignore @sensor-it/api
+        run: bunx turbo-ignore @sensor-it/api --fallback=$TURBO_RUN_FILTER --task=build
       - run: echo "All good!"
