--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
-      TURBO_FALLBACK: ${{ github.event.pull_request.base.sha }}
+      TURBO_FALLBACK: ${{ github.event.before }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
