--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: Trampoline-CX/action-turbo-changed@v1
         with:
           workspace: "@sensor-it/api"
-          from: $TURBO_FALLBACK
+          from: ${{ env.TURBO_FALLBACK }}
   deploy:
     needs: checks
     if: needs.checks.outputs.changed == 'true'
