--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      # - name: Setup Bun 
-      #   uses: oven-sh/setup-bun@v2
-      # - name: Install dependencies
-      #   run: bun install
+      - name: Setup Bun 
+        uses: oven-sh/setup-bun@v2
+      - name: Install dependencies
+        run: bun install
         # run: bunx turbo-ignore @sensor-it/api --fallback=$TURBO_FALLBACK --task=build
       - name: Check for changes
         id: changedAction
