build: fix typo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,10 @@ jobs:
         with:
           workspace: "@sensor-it/api"
           from: ${{ env.TURBO_FALLBACK }}
-      - run: echo "Changed: ${{ steps.changedAction.outputs.changed }}"
-      - run: echo "Affected: ${{ steps.changedAction.outputs.affectedWorkspaces }}"
+      - run: |
+        echo "${{ steps.changedAction.outputs.changed }}"
+      - run: |
+        echo "${{ steps.changedAction.outputs.affectedWorkspaces }}"
   deploy:
     needs: checks
     if: needs.checks.outputs.changed == 'true'
