--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 jobs:
-  checks:
+  check:
     name: Build
     timeout-minutes: 10
     runs-on: ubuntu-latest
@@ -30,9 +30,10 @@ jobs:
           content="${content//'%'/'%25'}"
           content="${content//$'\n'/'%0A'}"
           content="${content//$'\r'/'%0D'}"
-          echo "::set-output name=result::$content"
+          echo "result=$content" >> "$GITHUB_OUTPUT"
+
   deploy:
-    needs: checks
+    needs: check
     # if: needs.checks.outputs.changed == 'true'
     name: Deploy
     runs-on: ubuntu-latest
@@ -41,4 +42,4 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - run: echo '${{ steps.checks.outputs.changed }}'
+      - run: echo '${{ needs.check.outputs.changed }}'
