--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
         id: changeset
         run: |
           content=`bunx turbo run build --filter="@sensor-it/api...[${{ env.TURBO_FALLBACK }}...HEAD]" --dry=json`
+          content="${content//$'\n'/}"
+          content="${content//$'\r'/}"
           echo "result=$content" >> "$GITHUB_OUTPUT"
       - run: echo '${{ steps.changeset.outputs.result }}'
       - run: echo '${{ contains(fromJSON(steps.changeset.outputs.result).packages, '@sensor-it/api') }}'
