--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     name: Build
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    # outputs:
-    #   changed: ${{ contains(fromJSON(steps.changeset.outputs.result).packages, '@sensor-it/api') }}
+    outputs:
+      changed: ${{ contains(fromJSON(steps.changeset.outputs.result).packages, '@sensor-it/api') }}
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
@@ -29,10 +29,7 @@ jobs:
           content=`bunx turbo run build --filter="@sensor-it/api...[${{ env.TURBO_FALLBACK }}...HEAD]" --dry=json`
           content="${content//$'\n'/}"
           content="${content//$'\r'/}"
-          content="${{ contains(fromJSON('$content').packages, '@sensor-it/api') }}"
           echo "result=$content" >> "$GITHUB_OUTPUT"
-      - run: echo '${{ steps.changeset.outputs.result }}'
-      # - run: echo '${{ contains(fromJSON(steps.changeset.outputs.result).packages, '@sensor-it/api') }}'
   deploy:
     needs: check
     # if: needs.checks.outputs.changed == 'true'
