build: tempory comment migration step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
           env-slug: "prod"
           project-slug: "sensor-it-ch6j"
           export-type: "file"
-      - name: Run migration
-        run: bun db migrate
+      # - name: Run migration
+      #   run: bun db migrate
       - name: Copy executable to AWS
         uses: appleboy/scp-action@v0.1.7
         with:
