build: add env to turborepo task

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,14 @@
 	"globalDependencies": ["**/.env*"],
 	"tasks": {
 		"build": {
+			"env": [
+				"DATABASE_URL",
+				"JWT_SECRET_KEY",
+				"GOOGLE_OAUTH_CLIENT_ID",
+				"GOOGLE_OAUTH_CLIENT_SECRET",
+				"GOOGLE_OAUTH_REDIRECT_URI"
+			],
+			"inputs": ["$TURBO_DEFAULT$", ".env"],
 			"dependsOn": ["^build"],
 			"outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", "dist/**"]
 		},
