--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,22 +3,23 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
+		"build": "bun build --compile --minify --sourcemap src/infra/http/server.ts --outfile dist/app",
 		"dev": "bun env:load bun run --watch src/infra/http/server.ts",
 		"lint": "biome lint ./src",
 		"format": "biome format --write ./src",
-		"env:load": "dotenv -e ../../.env --",
-		"build": "bun build --compile --minify --sourcemap src/infra/http/server.ts --outfile dist/app"
+		"env:load": "dotenv -e ../../.env --"
 	},
 	"dependencies": {
 		"@elysiajs/cors": "^1.0.4",
 		"@elysiajs/jwt": "^1.0.2",
 		"@sensor-it/auth": "workspace:*",
-		"drizzle-orm": "^0.31.2",
+		"@sensor-it/db": "workspace:*",
+		"@sensor-it/env": "workspace:*",
+		"drizzle-orm": "^0.33.0",
 		"elysia": "1.0.27",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@sensor-it/db": "workspace:*",
 		"@sensor-it/tsconfig": "workspace:*",
 		"@types/bun": "^1.1.4"
 	}
