feat: temporary add mqtt connection to free broker

--- a/apps/hardware/device-1/platformio.ini
+++ b/apps/hardware/device-1/platformio.ini
@@ -15,5 +15,5 @@ framework = arduino
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
 lib_deps = 
-	lasselukkari/aWOT@^3.4.0
 	bblanchon/ArduinoJson@^6.20.1
+	knolleary/PubSubClient@^2.8
