--- a/apps/helios/package.json
+++ b/apps/helios/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"build": "bun build --compile --minify --sourcemap src/infra/http/server.ts --outfile dist/app",
-		"dev": "bun env:load bun run --watch src/infra/http/server.ts",
+		"build": "bun build --compile --minify --sourcemap src/infra/mqtt/app.ts --outfile dist/app",
 		"dev:mqtt": "bun env:load bun run --watch src/infra/mqtt/app.ts",
 		"lint": "biome lint ./src",
 		"format": "biome format --write ./src",
