--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -2,6 +2,11 @@ name: "[API] Deploy"
 
 on:
   workflow_call:
+    secrets:
+      TURBO_TOKEN:
+        required: true
+      TURBO_TEAM:
+        required: true
 
 jobs:
   check:
@@ -15,6 +20,9 @@ jobs:
     if: ${{ needs.check.outputs.changed == 'true' || github.event_name == 'workflow_dispatch' }}
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
