--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"build": "bun build --compile --minify --sourcemap src/infra/http/server.ts --outfile dist/app",
 		"dev": "bun env:load bun run --watch src/infra/http/server.ts",
+		"dev:mqtt": "bun env:load bun run --watch src/infra/mqtt/app.ts",
 		"lint": "biome lint ./src",
 		"format": "biome format --write ./src",
 		"env:load": "dotenv -e ../../.env --"
@@ -17,6 +18,7 @@
 		"@sensor-it/env": "workspace:*",
 		"drizzle-orm": "^0.33.0",
 		"elysia": "1.0.27",
+		"mqtt": "^5.10.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
