--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,15 +6,18 @@
 		"build": "bun build --compile --minify --sourcemap src/infra/http/server.ts --outfile dist/app",
 		"dev": "bun env:load bun run --watch src/infra/http/server.ts",
 		"dev:mqtt": "bun env:load bun run --watch src/infra/mqtt/app.ts",
+		"env:load": "dotenv -e ../../.env --",
 		"lint": "biome lint ./src",
 		"format": "biome format --write ./src",
-		"env:load": "dotenv -e ../../.env --"
+		"db:migrate": "bun env:load bun scripts/db-migrate.ts",
+		"db:seed": "bun env:load bun scripts/db-seed.ts",
+		"db:generate": "bun env:load drizzle-kit generate",
+		"db:studio": "bun env:load drizzle-kit studio"
 	},
 	"dependencies": {
 		"@elysiajs/cors": "^1.0.4",
 		"@elysiajs/jwt": "^1.0.2",
 		"@sensor-it/auth": "workspace:*",
-		"@sensor-it/db": "workspace:*",
 		"@sensor-it/env": "workspace:*",
 		"drizzle-orm": "^0.33.0",
 		"elysia": "1.0.27",
