--- a/packages/clickhouse/package.json
+++ b/packages/clickhouse/package.json
@@ -10,10 +10,10 @@
 	},
 	"dependencies": {
 		"@clickhouse/client": "^1.5.0",
-		"@sensor-it/auth": "workspace:*"
+		"@sensor-it/auth": "workspace:*",
+		"@sensor-it/env": "workspace:*"
 	},
 	"devDependencies": {
-		"@sensor-it/env": "workspace:*",
 		"@sensor-it/tsconfig": "workspace:*",
 		"@types/bun": "^1.1.4",
 		"clickhouse-migrations": "^0.1.14"
