--- a/.github/workflows/deploy-atlas.yml
+++ b/.github/workflows/deploy-atlas.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Run migration
         env:
           NODE_TLS_REJECT_UNAUTHORIZED: 0
-        run: bun db migrate
+        run: bun api db:migrate
       - name: Copy executable to AWS
         uses: appleboy/scp-action@v0.1.7
         with:
