--- a/apps/houston/package.json
+++ b/apps/houston/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "bun env:load bun run --watch src/infra/http/server.ts",
-		"dev:mqtt": "bun env:load bun run --watch src/infra/mqtt/app.ts",
+		"dev": "bun env:load bun run --watch src/http/server.ts",
 		"lint": "biome lint ./src",
 		"format": "biome format --write ./src",
 		"env:load": "dotenv -e ../../.env --",
