--- a/apps/hardware/device-1/platformio.ini
+++ b/apps/hardware/device-1/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	adafruit/Adafruit MPU6050@^2.2.6
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	kosme/arduinoFFT@^2.0.2
+	openenergymonitor/EmonLib@^1.1.0
